--- a/scss_modules/morseChart.scss
+++ b/scss_modules/morseChart.scss
@@ -1,8 +1,9 @@
 .morseChart {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 100px 100px 100px 100px 100px;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  padding: 10%;
+  margin-top: 50px;
+  margin-left: 25%;
 }
 
 .morseChart > p {
