--- a/scss_modules/titleCard.scss
+++ b/scss_modules/titleCard.scss
@@ -40,6 +40,15 @@
     letter-spacing: -1px;
   }
 
+  &__morse {
+    @extend logo;
+    font-weight: normal;
+    color: gray;
+    font-size: 17.5px;
+    margin-left: 5px;
+    letter-spacing: -1px;
+    margin-left: 2%;
+  }
 }
 
 .hr {
